--- a/shutter-starter/pom.xml
+++ b/shutter-starter/pom.xml
@@ -31,4 +31,17 @@
         <module>shutter-starter-dependency</module>
     </modules>
 
+    <!-- 依赖管理 -->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>cn.org.niubility</groupId>
+                <artifactId>shutter-core-dependency</artifactId>
+                <version>${project.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
 </project>
