--- a/shutter-core/pom.xml
+++ b/shutter-core/pom.xml
@@ -39,6 +39,8 @@
         <hutool.version>5.7.21</hutool.version>
         <reflectasm.version>1.11.9</reflectasm.version>
         <jackson.version>2.13.1</jackson.version>
+        <knife4j.version>3.0.3</knife4j.version>
+        <jsoup.version>1.11.3</jsoup.version>
     </properties>
 
     <!-- 依赖管理 -->
@@ -51,6 +53,12 @@
                 <version>${spring-boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <!-- Knife4j -->
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-spring-boot-starter</artifactId>
+                <version>${knife4j.version}</version>
             </dependency>
             <!-- Lombok -->
             <dependency>
@@ -110,6 +118,12 @@
                 <groupId>com.fasterxml.jackson.datatype</groupId>
                 <artifactId>jackson-datatype-jsr310</artifactId>
                 <version>${jackson.version}</version>
+            </dependency>
+            <!-- Jsoup -->
+            <dependency>
+                <groupId>org.jsoup</groupId>
+                <artifactId>jsoup</artifactId>
+                <version>${jsoup.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
