--- a/shutter-core/shutter-core-common/pom.xml
+++ b/shutter-core/shutter-core-common/pom.xml
@@ -25,6 +25,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+            <scope>provided</scope>
             <exclusions>
                 <!--排除logback-->
                 <exclusion>
@@ -36,6 +37,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j2</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -46,6 +48,7 @@
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-spring-boot-starter</artifactId>
+            <scope>provided</scope>
         </dependency>
         <!-- Lombok -->
         <dependency>
