--- a/shutter-core/shutter-core-web/pom.xml
+++ b/shutter-core/shutter-core-web/pom.xml
@@ -26,6 +26,7 @@
             <groupId>cn.org.niubility</groupId>
             <artifactId>shutter-core-common</artifactId>
             <version>${project.version}</version>
+            <scope>provided</scope>
         </dependency>
         <!-- SpringBoot -->
         <dependency>
