--- a/shutter-sdk/shutter-sdk-orm/pom.xml
+++ b/shutter-sdk/shutter-sdk-orm/pom.xml
@@ -25,6 +25,7 @@
         <dependency>
             <groupId>cn.org.niubility</groupId>
             <artifactId>shutter-core-common</artifactId>
+            <scope>provided</scope>
         </dependency>
         <!-- SpringBoot -->
         <dependency>
@@ -48,6 +49,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
         <!-- Lombok -->
         <dependency>
