--- a/shutter-core/shutter-core-common/pom.xml
+++ b/shutter-core/shutter-core-common/pom.xml
@@ -87,6 +87,15 @@
             <groupId>com.esotericsoftware</groupId>
             <artifactId>reflectasm</artifactId>
         </dependency>
+        <!-- Jackson -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
         <!-- Jsoup -->
         <dependency>
             <groupId>org.jsoup</groupId>
