--- a/shutter-sdk/shutter-sdk-orm/pom.xml
+++ b/shutter-sdk/shutter-sdk-orm/pom.xml
@@ -21,6 +21,9 @@
 
     <!-- 依赖配置 -->
     <dependencies>
+
+        <!-- 下面的依赖不会传递 -->
+
         <!-- Shutter Core Common -->
         <dependency>
             <groupId>cn.org.niubility</groupId>
@@ -65,6 +68,9 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+
+        <!-- 下面的依赖会传递 -->
+
         <!-- Mybatis Plus -->
         <dependency>
             <groupId>com.baomidou</groupId>
@@ -75,4 +81,5 @@
             <artifactId>jsqlparser</artifactId>
         </dependency>
     </dependencies>
+    
 </project>
