--- a/shutter-app/shutter-app-console/pom.xml
+++ b/shutter-app/shutter-app-console/pom.xml
@@ -19,4 +19,29 @@
     <name>Shutter APP Console</name>
     <description>Shutter APP Console是控制台的后端的应用程序</description>
 
+    <!-- 依赖配置 -->
+    <dependencies>
+        <!-- Shutter Core Common -->
+        <dependency>
+            <groupId>cn.org.niubility</groupId>
+            <artifactId>shutter-core-common</artifactId>
+        </dependency>
+        <!-- Shutter Core Web -->
+        <dependency>
+            <groupId>cn.org.niubility</groupId>
+            <artifactId>shutter-core-web</artifactId>
+        </dependency>
+        <!-- Shutter Module System -->
+        <dependency>
+            <groupId>cn.org.niubility</groupId>
+            <artifactId>shutter-module-system</artifactId>
+        </dependency>
+        <!-- SpringBoot -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+    </dependencies>
+
 </project>
