--- a/shutter-core/pom.xml
+++ b/shutter-core/pom.xml
@@ -29,7 +29,7 @@
 
     <!-- 项目属性 -->
     <properties>
-        <knife4j.version>3.0.3</knife4j.version>
+        <!-- Shutter Core Common -->
         <guava.version>31.0.1-jre</guava.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <commons-collections4.version>4.4</commons-collections4.version>
@@ -38,6 +38,7 @@
         <reflectasm.version>1.11.9</reflectasm.version>
         <jackson.version>2.13.1</jackson.version>
         <jsoup.version>1.11.3</jsoup.version>
+        <!-- Shutter Core Web -->
         <bitwalker.version>1.21</bitwalker.version>
         <ip2region.version>1.7.2</ip2region.version>
     </properties>
@@ -45,13 +46,6 @@
     <!-- 依赖管理 -->
     <dependencyManagement>
         <dependencies>
-            <!-- Knife4j -->
-            <dependency>
-                <groupId>com.github.xiaoymin</groupId>
-                <artifactId>knife4j-spring-boot-starter</artifactId>
-                <version>${knife4j.version}</version>
-                <scope>provided</scope>
-            </dependency>
             <!-- Guava -->
             <dependency>
                 <groupId>com.google.guava</groupId>
