--- a/shutter-core/shutter-core-database/pom.xml
+++ b/shutter-core/shutter-core-database/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>shutter-core-common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!-- MySql -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
 </project>
