--- a/shutter-module/shutter-module-system/pom.xml
+++ b/shutter-module/shutter-module-system/pom.xml
@@ -21,34 +21,24 @@
 
     <!-- 依赖配置 -->
     <dependencies>
-        <!-- 下面的依赖不会传递 -->
         <!-- Shutter Core Common -->
         <dependency>
             <groupId>cn.org.niubility</groupId>
             <artifactId>shutter-core-common</artifactId>
             <version>${project.version}</version>
-            <scope>provided</scope>
+        </dependency>
+        <!-- Shutter Core Database -->
+        <dependency>
+            <groupId>cn.org.niubility</groupId>
+            <artifactId>shutter-core-database</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <!-- Shutter Core Web -->
         <dependency>
             <groupId>cn.org.niubility</groupId>
             <artifactId>shutter-core-web</artifactId>
             <version>${project.version}</version>
-            <scope>provided</scope>
         </dependency>
-        <!-- SpringBoot -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <scope>provided</scope>
-        </dependency>
-
-        <!-- 下面的依赖会传递，多个Module由Maven自动解决依赖冲突 -->
         <!-- Shutter SDK ORM -->
         <dependency>
             <groupId>cn.org.niubility</groupId>
