--- a/shutter-app/shutter-app-console/src/main/resources/application-dev.yml
+++ b/shutter-app/shutter-app-console/src/main/resources/application-dev.yml
@@ -1,5 +1,7 @@
 server:
   port: 10001
+logging:
+  config: classpath:log4j-dev.xml
 spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
