[xuepeng]修改工程信息

--- a/shutter-module/shutter-module-system/pom.xml
+++ b/shutter-module/shutter-module-system/pom.xml
@@ -42,7 +42,7 @@
         <!-- Shutter SDK ORM -->
         <dependency>
             <groupId>cn.org.niubility</groupId>
-            <artifactId>shutter-sdk-orm</artifactId>
+            <artifactId>shutter-sdk-mybatis</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
