[xuepeng]开发Log4j2的SDK

--- a/shutter-sdk/shutter-sdk-log4j2/pom.xml
+++ b/shutter-sdk/shutter-sdk-log4j2/pom.xml
@@ -12,11 +12,20 @@
 
     <!-- 基础信息 -->
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>shutter-sdk-log</artifactId>
+    <artifactId>shutter-sdk-log4j2</artifactId>
     <packaging>jar</packaging>
 
     <!-- 项目介绍 -->
     <name>Shutter SDK Log</name>
-    <description>Shutter SDK Log提供了日志相关的开发工具</description>
+    <description>Shutter SDK Log4j2提供了日志相关的开发工具</description>
+
+    <!-- 依赖配置 -->
+    <dependencies>
+        <!-- Shutter Core Common -->
+        <dependency>
+            <groupId>cn.org.niubility</groupId>
+            <artifactId>shutter-core-web</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
