--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <project.build.java.version>1.8</project.build.java.version>
         <spring-boot.version>2.6.3</spring-boot.version>
         <lombok.version>1.18.22</lombok.version>
+        <mapstruct.version>1.4.2.Final</mapstruct.version>
         <junit.version>4.13.2</junit.version>
     </properties>
 
@@ -56,6 +57,17 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <!-- MapStruct -->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>${mapstruct.version}</version>
         </dependency>
         <!-- JUnit -->
         <dependency>
