[xuepeng]整理工程依赖。

--- a/shutter-core/pom.xml
+++ b/shutter-core/pom.xml
@@ -98,6 +98,12 @@
                 <artifactId>jsoup</artifactId>
                 <version>${jsoup.version}</version>
             </dependency>
+            <!-- Knife4j -->
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-spring-boot-starter</artifactId>
+                <version>${knife4j.version}</version>
+            </dependency>
             <!-- Bitwalker -->
             <dependency>
                 <groupId>eu.bitwalker</groupId>
