[xuepeng]加入自动生成登录密码的功能。

--- a/shutter-module/shutter-module-system/pom.xml
+++ b/shutter-module/shutter-module-system/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>shutter-sdk-mybatis</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!-- SpringBoot -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
