--- a/shutter-sdk/pom.xml
+++ b/shutter-sdk/pom.xml
@@ -21,7 +21,7 @@
 
     <!-- 模块管理 -->
     <modules>
-        <module>shutter-sdk-auth</module>
+        <module>shutter-sdk-verifycode</module>
         <module>shutter-sdk-log4j2</module>
         <module>shutter-sdk-mybatis</module>
         <module>shutter-sdk-redis</module>
@@ -35,6 +35,7 @@
     <properties>
         <mybatis-plus.version>3.5.1</mybatis-plus.version>
         <jsqlparser.version>4.3</jsqlparser.version>
+        <captcha.version>1.6.2</captcha.version>
     </properties>
 
     <!-- 依赖管理 -->
@@ -58,6 +59,12 @@
                 <groupId>com.github.jsqlparser</groupId>
                 <artifactId>jsqlparser</artifactId>
                 <version>${jsqlparser.version}</version>
+            </dependency>
+            <!-- Java图形验证码 -->
+            <dependency>
+                <groupId>com.github.whvcse</groupId>
+                <artifactId>easy-captcha</artifactId>
+                <version>${captcha.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
