--- a/shutter-core/pom.xml
+++ b/shutter-core/pom.xml
@@ -41,6 +41,7 @@
         <knife4j.version>3.0.3</knife4j.version>
         <!-- Shutter Core Web -->
         <ip2region.version>1.7.2</ip2region.version>
+        <sa-token.version>1.29.0</sa-token.version>
     </properties>
 
     <!-- 依赖管理 -->
@@ -108,6 +109,17 @@
                 <groupId>org.lionsoul</groupId>
                 <artifactId>ip2region</artifactId>
                 <version>${ip2region.version}</version>
+            </dependency>
+            <!-- SaToken -->
+            <dependency>
+                <groupId>cn.dev33</groupId>
+                <artifactId>sa-token-spring-boot-starter</artifactId>
+                <version>${sa-token.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.dev33</groupId>
+                <artifactId>sa-token-dao-redis-jackson</artifactId>
+                <version>${sa-token.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
