--- a/shutter-app/shutter-app-console/src/main/resources/application.yml
+++ b/shutter-app/shutter-app-console/src/main/resources/application.yml
@@ -15,8 +15,19 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
-knife4j:
-  enable: true
+sa-token:
+  # token名称 (同时也是cookie名称)
+  token-name: X-SHUTTER-ACCESS-TOKEN
+  # token有效期，单位s 默认1天, -1代表永不过期
+  timeout: 86400
+  # token临时有效期 (指定时间内无操作就视为token过期) 单位: 秒
+  activity-timeout: -1
+  # 是否允许同一账号并发登录(为true时允许一起登录, 为false时新登录挤掉旧登录)
+  is-concurrent: false
+  # 在多人登录同一账号时(为true共用一个token, 为false每次登录新建一个token)
+  is-share: false
+  # token风格
+  token-style: uuid
 shutter:
   # Knife4j配置
   knife4j:
@@ -29,7 +40,7 @@ shutter:
   # 业务模块配置
   module:
     system:
-      sys-user-config:
+      sys-user-property:
         # 随机密码的长度
         random-password-length: 8
         # 密码加密策略
