--- a/shutter-sdk/pom.xml
+++ b/shutter-sdk/pom.xml
@@ -29,6 +29,7 @@
         <module>shutter-sdk-sms</module>
         <module>shutter-sdk-dependency</module>
         <module>shutter-sdk-knife4j</module>
+        <module>shutter-sdk-satoken</module>
     </modules>
 
     <!-- 项目属性 -->
@@ -36,6 +37,7 @@
         <mybatis-plus.version>3.5.1</mybatis-plus.version>
         <jsqlparser.version>4.3</jsqlparser.version>
         <captcha.version>1.6.2</captcha.version>
+        <sa-token.version>1.29.0</sa-token.version>
     </properties>
 
     <!-- 依赖管理 -->
@@ -65,6 +67,17 @@
                 <groupId>com.github.whvcse</groupId>
                 <artifactId>easy-captcha</artifactId>
                 <version>${captcha.version}</version>
+            </dependency>
+            <!-- SaToken -->
+            <dependency>
+                <groupId>cn.dev33</groupId>
+                <artifactId>sa-token-spring-boot-starter</artifactId>
+                <version>${sa-token.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.dev33</groupId>
+                <artifactId>sa-token-dao-redis-jackson</artifactId>
+                <version>${sa-token.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
